welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:2: error: reassignment to val
if ( a=b){
      ^maxMod5:5: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Short)Int
match expected type ?
if (a%5=b%5 & a<b){
     ^maxMod5:8: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Short)Int
match expected type ?
if (a%5=b%5 & b<a){
     ^